add same key filter